Drop spring